[package]
name = "mdog"
version = "0.1.0"
edition = "2021"

[dependencies]
vigem = { path = "libs/vigem-rs" }
interception = { path = "libs/interception-rs" }
cpal = "0.15.3"
colored = "3.0.0"

thread-priority = "1.0"
anyhow = "1.0.57"
bitflags = "2.8.0"

serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.29", features = ["derive"] }
ron = "0.8.1"

log = "0.4.16"
env_logger = "0.11.6"

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true